--- a/pkg/web/templates/layout.html
+++ b/pkg/web/templates/layout.html
@@ -68,17 +68,6 @@
             font-weight: 500;
         }
 
-        .badge#channel-badge {
-            background-color: #0d6efd;
-        }
-
-        .badge#channel-badge.beta {
-            background-color: #fd7e14;
-        }
-        .badge#channel-badge.nightly {
-            background-color: #6c757d;
-        }
-
         .table {
             color: var(--text-color);
         }
@@ -180,7 +169,9 @@
                     <i class="bi bi-sun-fill" id="lightIcon"></i>
                     <i class="bi bi-moon-fill d-none" id="darkIcon"></i>
                 </div>
-                <span class="badge me-2" id="channel-badge">Loading...</span>
+                <a href="{{.URLBase}}stats" class="me-2">
+                    <i class="bi bi-bar-chart-line me-1"></i>Stats
+                </a>
                 <span class="badge bg-primary" id="version-badge">Loading...</span>
             </div>
         </div>
@@ -323,22 +314,20 @@
             .then(response => response.json())
             .then(data => {
                 const versionBadge = document.getElementById('version-badge');
-                const channelBadge = document.getElementById('channel-badge');
 
                 // Add url to version badge
-                versionBadge.innerHTML = `<a href="https://github.com/sirrobot01/debrid-blackhole/releases/tag/${data.version}" target="_blank" class="text-white">${data.version}</a>`;
-                channelBadge.textContent = data.channel.charAt(0).toUpperCase() + data.channel.slice(1);
+                versionBadge.innerHTML = `<a href="https://github.com/sirrobot01/debrid-blackhole/releases/tag/${data.version}" target="_blank" class="text-white">${data.channel}-${data.version}</a>`;
+
 
                 if (data.channel === 'beta') {
-                    channelBadge.classList.add('beta');
+                    versionBadge.classList.add('beta');
                 } else if (data.channel === 'nightly') {
-                    channelBadge.classList.add('nightly');
+                    versionBadge.classList.add('nightly');
                 }
             })
             .catch(error => {
                 console.error('Error fetching version:', error);
                 document.getElementById('version-badge').textContent = 'Unknown';
-                document.getElementById('channel-badge').textContent = 'Unknown';
             });
     });
 </script>
