Random access for RARed RealDebrid torrents (#61)
* feat: AI translated port of RARAR.py in Go

* feat: Extract and cache byte ranges of RARed RD torrents

* feat: Stream and download files with byte ranges if specified

* refactor: Use a more structured data format for byte ranges

* fix: Rework streaming to fix error handling

* perf: More efficient RAR file pre-processing

* feat: Made the RAR unpacker an optional config option

* refactor: Remove unnecessary Rar prefix for more idiomatic code

* refactor: More appropriate private method declaration

* feat: Error handling for parsing RARed torrents with retry requests and EOF validation

* fix: Correctly parse unicode file names

* fix: Handle special character conversion for RAR torrent file names

* refactor: Removed debug logs

* feat: Only allow two concurrent RAR unpacking tasks

* fix: Include "<" and ">" as unsafe chars for RAR unpacking

* refactor: Seperate types into their own file

* refactor: Don't read RAR files on reader initialization

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -364,10 +364,17 @@
         </div>
         <div class="col-md-3">
             <div class="form-check me-3">
+                <input type="checkbox" class="form-check-input" name="debrid[${index}].unpack_rar" id="debrid[${index}].unpack_rar">
+                <label class="form-check-label" for="debrid[${index}].unpack_rar">Unpack RAR</label>
+            </div>
+            <small class="form-text text-muted">Preprocess RARed torrents to allow reading the files inside</small>
+        </div>
+        <div class="col-md-4">
+            <div class="form-check me-3">
                 <input type="checkbox" class="form-check-input useWebdav" name="debrid[${index}].use_webdav" id="debrid[${index}].use_webdav">
                 <label class="form-check-label" for="debrid[${index}].use_webdav">Enable WebDav Server</label>
             </div>
-             <small class="form-text text-muted">Create an internal webdav for this debrid</small>
+            <small class="form-text text-muted">Create an internal webdav for this debrid</small>
         </div>
     </div>
     <div class="webdav d-none">
@@ -1092,6 +1099,7 @@
                     rate_limit: document.querySelector(`[name="debrid[${i}].rate_limit"]`).value,
                     download_uncached: document.querySelector(`[name="debrid[${i}].download_uncached"]`).checked,
                     check_cached: document.querySelector(`[name="debrid[${i}].check_cached"]`).checked,
+                    unpack_rar: document.querySelector(`[name="debrid[${i}].unpack_rar"]`).checked,
                     add_samples: document.querySelector(`[name="debrid[${i}].add_samples"]`).checked,
                     use_webdav: document.querySelector(`[name="debrid[${i}].use_webdav"]`).checked
                 };
