--- a/pkg/web/templates/layout.html
+++ b/pkg/web/templates/layout.html
@@ -169,7 +169,7 @@
                     <i class="bi bi-sun-fill" id="lightIcon"></i>
                     <i class="bi bi-moon-fill d-none" id="darkIcon"></i>
                 </div>
-                <a href="{{.URLBase}}stats" class="me-2">
+                <a href="{{.URLBase}}debug/stats" class="me-2">
                     <i class="bi bi-bar-chart-line me-1"></i>Stats
                 </a>
                 <span class="badge bg-primary" id="version-badge">Loading...</span>
